--- a/exercise0/src_to_implement/Test.ipynb
+++ b/exercise0/src_to_implement/Test.ipynb
@@ -142,43 +142,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
-       "        [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
-       "        [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
-       "        [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
-       "        [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
-       "        [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
-       "        [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
-       "        [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
-       "        [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
-       "        [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]]),\n",
-       " array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "        [2, 2, 2, 2, 2, 2, 2, 2, 2, 2],\n",
-       "        [3, 3, 3, 3, 3, 3, 3, 3, 3, 3],\n",
-       "        [4, 4, 4, 4, 4, 4, 4, 4, 4, 4],\n",
-       "        [5, 5, 5, 5, 5, 5, 5, 5, 5, 5],\n",
-       "        [6, 6, 6, 6, 6, 6, 6, 6, 6, 6],\n",
-       "        [7, 7, 7, 7, 7, 7, 7, 7, 7, 7],\n",
-       "        [8, 8, 8, 8, 8, 8, 8, 8, 8, 8],\n",
-       "        [9, 9, 9, 9, 9, 9, 9, 9, 9, 9]]))"
+       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 1, 1, 1, 1, 1, 0, 0],\n",
+       "       [0, 0, 1, 1, 1, 1, 1, 1, 1, 0],\n",
+       "       [0, 0, 1, 1, 1, 1, 1, 1, 1, 0],\n",
+       "       [0, 0, 1, 1, 1, 1, 1, 1, 1, 0],\n",
+       "       [0, 0, 1, 1, 1, 1, 1, 1, 1, 0],\n",
+       "       [0, 0, 1, 1, 1, 1, 1, 1, 1, 0],\n",
+       "       [0, 0, 0, 1, 1, 1, 1, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "resolution = 10\n",
-    "np.meshgrid(np.arange(resolution), np.arange(resolution))"
+    "# position = (5,5)\n",
+    "radius = 4\n",
+    "x0 = 5\n",
+    "y0 = 5\n",
+    "Y,X = np.meshgrid(np.arange(resolution), np.arange(resolution))\n",
+    "\n",
+    "distance = np.sqrt((X-x0)**2 + (Y-y0)**2)\n",
+    "\n",
+    "distance\n",
+    "# distance[distance <= radius] = 0\n",
+    "mask = (distance < radius).astype(int)\n",
+    "\n",
+    "mask"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7.07106781, 6.40312424, 5.83095189, 5.38516481, 5.09901951,\n",
+       "        5.        , 5.09901951, 5.38516481, 5.83095189, 6.40312424],\n",
+       "       [6.40312424, 5.65685425, 5.        , 4.47213595, 4.12310563,\n",
+       "        4.        , 4.12310563, 4.47213595, 5.        , 5.65685425],\n",
+       "       [5.83095189, 5.        , 4.24264069, 3.60555128, 3.16227766,\n",
+       "        3.        , 3.16227766, 3.60555128, 4.24264069, 5.        ],\n",
+       "       [5.38516481, 4.47213595, 3.60555128, 2.82842712, 2.23606798,\n",
+       "        2.        , 2.23606798, 2.82842712, 3.60555128, 4.47213595],\n",
+       "       [5.09901951, 4.12310563, 3.16227766, 2.23606798, 1.41421356,\n",
+       "        1.        , 1.41421356, 2.23606798, 3.16227766, 4.12310563],\n",
+       "       [5.        , 4.        , 3.        , 2.        , 1.        ,\n",
+       "        0.        , 1.        , 2.        , 3.        , 4.        ],\n",
+       "       [5.09901951, 4.12310563, 3.16227766, 2.23606798, 1.41421356,\n",
+       "        1.        , 1.41421356, 2.23606798, 3.16227766, 4.12310563],\n",
+       "       [5.38516481, 4.47213595, 3.60555128, 2.82842712, 2.23606798,\n",
+       "        2.        , 2.23606798, 2.82842712, 3.60555128, 4.47213595],\n",
+       "       [5.83095189, 5.        , 4.24264069, 3.60555128, 3.16227766,\n",
+       "        3.        , 3.16227766, 3.60555128, 4.24264069, 5.        ],\n",
+       "       [6.40312424, 5.65685425, 5.        , 4.47213595, 4.12310563,\n",
+       "        4.        , 4.12310563, 4.47213595, 5.        , 5.65685425]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "       [2, 2, 2, 2, 2, 2, 2, 2, 2, 2],\n",
+       "       [3, 3, 3, 3, 3, 3, 3, 3, 3, 3],\n",
+       "       [4, 4, 4, 4, 4, 4, 4, 4, 4, 4],\n",
+       "       [5, 5, 5, 5, 5, 5, 5, 5, 5, 5],\n",
+       "       [6, 6, 6, 6, 6, 6, 6, 6, 6, 6],\n",
+       "       [7, 7, 7, 7, 7, 7, 7, 7, 7, 7],\n",
+       "       [8, 8, 8, 8, 8, 8, 8, 8, 8, 8],\n",
+       "       [9, 9, 9, 9, 9, 9, 9, 9, 9, 9]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       "       [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       "       [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       "       [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       "       [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       "       [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       "       [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       "       [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       "       [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       "       [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
