--- a/exercise1_material/src_to_implement/Test.ipynb
+++ b/exercise1_material/src_to_implement/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "645d53c8",
    "metadata": {},
    "outputs": [
@@ -13,7 +13,7 @@
        "       [ 2,  3,  6]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,13 +25,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6f3ece96",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "858b35e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 3],\n",
+       "       [2, 3, 6]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction_tensor[prediction_tensor < 0] = 0\n",
+    "prediction_tensor"
    ]
   },
   {
